# ai-prompts-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.toml
mcp_server/: main.py
mcp_server/prompts/: code-beautifier.md  code-review.md  comment-cleaner.md  commit.md  github-coderabbitai-review-handler.md  github-review-handler.md  readme-generator.md  smart-test-runner.md  tasks.md
mcp_server/scripts/github-coderabbitai-review-handler/: get-coderabbit-comments.sh
mcp_server/scripts/github-review-handler/: get-human-reviews.sh
mcp_server/tests/: __init__.py  conftest.py  test_integration.py  test_main.py
mcp_server/tests/utils/: __init__.py  test_utils.py
mcp_server/utils/: __init__.py  utils.py
