[tool.coverage.run]
omit = ["mcp_server/tests/*"]

[tool.coverage.report]
fail_under = 90
skip_empty = true

[tool.coverage.html]
directory = ".tests_coverage"

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
warn_unused_configs = true
warn_redundant_casts = true

[project]
name = "ai-prompts-mcp"
version = "0.1.1"
description = "MCP Server for AI prompts using FastMCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.11.1"]

[project.scripts]
ai-prompts-mcp = "mcp_server.main:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
