[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=mcp_server",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=80",
  "-ra",
]
testpaths = ["mcp_server/tests"]
markers = [
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests",
  "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["mcp_server"]
omit = [
  "mcp_server/tests/*",
  "mcp_server/__init__.py",
  "mcp_server/tests/__init__.py",
  "mcp_server/utils/__init__.py",
]
branch = true

[tool.coverage.report]
fail_under = 80
skip_empty = true
show_missing = true

[tool.coverage.html]
directory = ".tests_coverage"

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
warn_unused_configs = true
warn_redundant_casts = true

[project]
name = "ai-prompts-mcp"
version = "0.1.1"
description = "MCP Server for AI prompts using FastMCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.11.1"]

[project.scripts]
ai-prompts-mcp = "mcp_server.main:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipdb>=0.13.13", "ipython>=9.4.0"]
tests = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "pytest-asyncio>=0.21.0",
  "pytest-xdist>=3.8.0",
]
